# ai_diff_driver

./: .gitignore  CMakeLists.txt  README.md  package.xml
src/: Pipfile  _init_dependencies.sh  actor_critic.py  ai_driver_node.py  checkpoint  exceptions.py  loss_data.csv  neural_net.py  odrive_node.py  python  qlearning.py  qlearning_weights.h5f.data-00000-of-00001  qlearning_weights.h5f.index  robot_env.py  ros_driver_node.py  ros_driver_simulator.py  sac.py  sac_agent.py  simulated_driver.py  simulator_test.py  start_actor_critic.sh  start_ai_driver_node.sh  start_odrive_node.sh  start_simulator.sh  start_soft_A2C.sh  start_test.sh  train.py  virtual_fence.py
src/saved-models/: a2c-solved.h5  model-1-10000.h5  model-1-12000.h5  model-1-14000.h5  model-1-16000.h5  model-1-18000.h5  model-1-2000.h5  model-1-20000.h5  model-1-22000.h5  model-1-24000.h5  model-1-26000.h5  model-1-4000.h5  model-1-6000.h5  model-1-8000.h5  model-1-good-1.h5  qlearning_weights.h5f.data-00000-of-00001  qlearning_weights.h5f.index
src/saved-models/model-10-16/: qlearning_weights.h5f.data-00000-of-00001  qlearning_weights.h5f.index
src/test/: generate_test_current.py  generate_test_data.py
